--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -138,30 +138,27 @@ section h3 {
     font-size: 16px;
   }
 
-  .intro {
-      text-align: center;
-  }
-
   .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
   }
 
   .steps {
-      text-align: center;
       background: #fce138;
   }
     
   .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    width: 50%;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
   }
   
   .primary-border {
@@ -197,7 +194,6 @@ section h3 {
   }
 
   .trainers {
-      text-align: center;
       overflow: auto;
   }
 
@@ -248,7 +244,6 @@ section h3 {
 
   .contact {
       background-color: #024e76;
-      text-align: center;
   }
 
   .contact h2 {
@@ -283,5 +278,9 @@ section h3 {
   .contact-info iframe {
     width: 400px;
     height: 400px;
+  }
+
+  .flex-row {
+    display: flex;
   }
   
