--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,7 +40,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -80,6 +80,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 /* Hero Style End */
 
@@ -98,7 +99,7 @@ section {
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -152,7 +153,7 @@ section h3 {
   }
     
   .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     width: 50%;
@@ -333,3 +334,18 @@ section h3 {
     display: flex;
   }
   
+  /* MEDIA QUERY SECTION */
+  @media screen and (max-width: 980px) {
+
+    
+  }
+
+  @media screen and (max-width: 768px) {
+
+
+  }
+
+  @media screen and (max-width: 575px) {
+   
+  
+  }
