--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,12 +14,23 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: sticky;
+    top: 0;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, .5);
 }
 
 header a {
@@ -43,6 +54,7 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, .5);
 }
 
 footer {
@@ -91,6 +103,10 @@ section {
     border: solid 3px #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(252, 225, 56, .8);
+    border-radius: 15px;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .hero-cta {
@@ -106,6 +122,7 @@ section {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, .5);
 }
 
 section h3 {
@@ -125,6 +142,13 @@ section h3 {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba( 255, 255, 255, .75);
+}
+
+.form-input:focus {
+  background-color: rgba( 255, 255, 255, 1);
+  outline: none;
 }
 
 .hero-form label {
@@ -137,6 +161,11 @@ section h3 {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+  }
+
+  .hero-form button:hover {
+    background-color: #39a6b2;
   }
 
   .intro p {
@@ -211,11 +240,11 @@ section h3 {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #39a6b2;
   }
 
   .trainers {
@@ -224,6 +253,10 @@ section h3 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+  }
+
+  .step:last-child {
+    border-bottom: none;
   }
 
   .trainer {
@@ -305,6 +338,13 @@ section h3 {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba( 255, 255, 255, .75);
+  }
+
+  .contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba( 255, 255, 255, 1);
+    outline: none;
   }
 
   .contact-form button {
@@ -315,6 +355,12 @@ section h3 {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+  }
+
+  .contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
   }
   
   .contact-info a {
@@ -340,6 +386,7 @@ section h3 {
     header {
       padding-bottom: 0;
       justify-content: center;
+      position: relative;
     }
 
     header h1 {
@@ -355,6 +402,13 @@ section h3 {
 
     header nav ul li a {
       font-size: 20px;
+    }
+
+    header nav ul li a:hover {
+      background: #fce138;
+      color: #024e76;
+      border-radius: 15px;
+      text-shadow: none;
     }
 
     footer h2, footer div {
